# SekaiTranslatorV

./: .gitignore  README.md  SekaiTranslator.spec  installer.iss
.github/workflows/: build.yml
sekai-core/: Cargo.toml  PROTOCOL.md  pyproject.toml
sekai-core/py/: README.md  pyproject.toml
sekai-core/py/src/core_client/: __init__.py  client.py
sekai-core/src/: main.rs
sekai-core/src/model/: entry.rs  mod.rs  project.rs
sekai-core/src/parsers/: kirikiri.rs  mod.rs
sekai-core/src/protocol/: command.rs  mod.rs  project.rs
sekai-core/src/services/: ai.rs  ai_types.rs  encoding.rs  mod.rs  pipeline.rs  project.rs  qa.rs  rebuild.rs
sekai-core/src/services/translation_memory/: hash.rs  matcher.rs  mod.rs  model.rs  normalize.rs  store.rs
sekai-ui/: core_client.py  main.py  test_core_ping.py  version.py
sekai-ui/models/: edit_session.py  entries_table_model.py  entry_model.py  project_state_store.py  translation_table_model.py  undo_stack.py
sekai-ui/parsers/: __init__.py  api.py  autodetect.py  base.py  entries.py  loader.py  manager.py  registry.py  repository.py  roundtrip.py  text_script.py  types.py
sekai-ui/services/: encoding_service.py  file_ops_service.py  file_progress_service.py  local_project_service.py  search_replace_service.py  sync_service.py  update_service.py
sekai-ui/themes/: dark.json  dark.overlay.qss.in  dark.qss  dark_classic.qss  light.json  light.overlay.qss.in  light.qss  light.qss.bak  sekai_future.json  sekai_future.overlay.qss.in  system.json  system.overlay.qss.in  system.qss  theme_manager.py  theme_storage.py
(+45 files in other folders)
