[package]
name = "sekai-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
encoding_rs = "0.8"
chardetng = "0.1"