[project]
name = "sekai-core-py"
version = "0.1.0"
description = "Python helpers/bindings for SekaiTranslatorV core"
authors = [{ name = "Satonix" }]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true
